2002-03-27  Miguel de Icaza  <miguel@ximian.com>

	* decl.cs (DeclSpace.IsTopLevel): Move property here from
	TypeContainer, so that Enum and Interface can use this too.

	* class.cs (TypeContainer.LookupInterfaceOrClass,
	GetInterfaceOrClass, GetClassBases, DefineType): Drop the
	`builder' argument.  Typically this was used to pass the parent
	builder (a ModuleBuilder or a TypeBuilder from whoever triggered
	the definition).  

	The problem is that a nested class could trigger the definition of
	a toplevel class, and the builder would be obviously wrong in that
	case. 

	So we drop this argument, and we compute dynamically the
	TypeBuilder/ModuleBuilder (the correct information was available
	to us anyways from DeclSpace.Parent)

	* interface.cs (Interface.DefineInterface): Drop builder
	parameter cleanup like class.cs

	* enum.cs (Enum.DefineEnum): Drop builder parameter.  Clean up
	like class.cs

	* statement.cs (Switch.EmitObjectInteger): Emit short/ushort
	values. 

	(Try.Emit): Propagate the returns value from the statement.

	(Return.Emit): Even if we are leavning 

	* driver.cs: Catch IOExpcetion for Directory.GetFiles as well.

	* modifiers.cs: Fix the computation of MethodAttributes flags.

Tue Mar 26 21:14:36 CET 2002 Paolo Molaro <lupus@ximian.com>

	* driver.cs: allow compilation of files that start with '/'.
	Add a default case when checking the argument of --target.

2002-03-25  Miguel de Icaza  <miguel@ximian.com>

	* interface.cs: Implement the same search algorithm for types in
	the interface code.

	* delegate.cs: Do not allow multiple definition.

	* Recovered ChangeLog that got accidentally amputated

	* interface.cs (Interface.DefineInterface): Prevent from double definitions.

	* rootcontext.cs: Load manually enum to allow core classes to
	contain enumerations.

	* enum.cs, ecore.cs, driver.cs, attribute.cs, class.cs, expression.cs:
	Update to new static methods in TypeManager.

	* typemanager.cs (GetMethod, GetConstructor): Use our